2009-08-01  Andreas K. Foerster  <info@akfoerster.de>

	* rename bell.flac into alert.flac
	avtar-audio.c, avatar.c: adapted

	* avatar.c (avt_show_text_cursor):
	don't update, when hold_update is set
	(avt_scroll_up): don't handle cursor here

	* avtterm.c (activate_cursor): new function
	All callers of avt_activate_cursor changed to activate_cursor
	(get_character): lock/unlock updates

2009-07-29  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_pager_mb):
	avt_pager_mb_len is now avt_pager_mb, old name removed
	avatarsay.c, pascal/akfavatar.pas: adapted

	* akfavatar.h, avatar.c (avt_pager_mb):
	support for parameter startline
	avatarsay.c, pascal/akfavatar.pas: adapted

	* male_user.xpm, female_user.xpm:
	mirrored to get the light/shadow effects consistent

2009-07-25  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_pager_mb_len): new function
	avatar.c (avt_pager_line, avt_pager_screen, avt_pager_lines_back)
	(avt_pager_mb_len): rewritten

	* avatarsay.c: use avt_pager_mb_len

2009-07-24  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_lock_updates): new function

	* avtfilechooser.c (new_page, avtfc_get_file):
	speed up with avt_lock_updates
	mingw/askdrive.c (ask_drive): also

	* avatarsay.c (about_avatarsay, menu):
	speed up with avt_lock_updates

	* avatar.c (avt_lock_updates, avt_set_text_delay, avt_set_delays):
	never allow hold_updates and text_delay being set at the same time

2009-07-23  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_pager_mb): new function
	avatar.c (avt_pager_line, avt_pager_screen)
        (avt_pager_lines_back): new functions

	* avatarsay.c [NO_PTY] (run_info):
	use avt_pager_mb for documentation
	avatarsay.c (open_document): removed
	avtwindows.c (open_document): removed

	* avatarsay.c (avatar_command): new command "pager"

	* avatar.c (hold_update): new variable
	many functions adapted (only used for pager for now)
